# robotem_rovne_gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ros2.yml
glade/: robotem_rovne_gui.glade  robotem_rovne_gui.glade~
include/robotem_rovne_gui/: Node.h
launch/: gui.py
src/: Node.cpp  main.cpp
